kustomize/overlays/scots-lab/apps/actual-budget/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: actual-budget
  namespace: actual-budget
  annotations:
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: Actual Budget
    gethomepage.dev/group: Applications
    gethomepage.dev/description: Personal Finance
    gethomepage.dev/icon: actual-budget.png
    gethomepage.dev/href: https://budget.srbii.com
    gethomepage.dev/weight: '25'
spec:
  parentRefs:
  - name: kgateway-http
    namespace: kgateway-system
  hostnames:
  - budget.srbii.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: actual-budget
      port: 5006
